Final Commit march 20th 2018, before push to Production New files added - [test] Files modified - [ForgotPassword,Login,SignIn,SignUp,MD5Encryption,app.variables.json,pages-config.json]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -9,10 +9,10 @@
                 <wm-gridrow name="gridrow18" padding="10px unset unset unset"></wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn29" height="70px">
-                        <wm-label padding="unset 0.5em" name="label5" caption="ABCDEFGHIJKLMNOPQRSTUVWXYZ" show="false"></wm-label>
-                        <wm-label padding="unset 0.5em" name="label3" caption="label3" show="false" width="100%"></wm-label>
-                        <wm-label padding="unset 0.5em" name="label4_1" show="false" width="100%" caption=""></wm-label>
-                        <wm-label padding="unset 0.5em" show="false" width="100%" name="label5_1" caption="bind:Variables.md5Check.dataSet.value"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label5" caption="ABCDEFGHIJKLMNOPQRSTUVWXYZ" show="true"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label3" caption="label3" show="true" width="100%"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label4_1" show="true" width="100%" caption=""></wm-label>
+                        <wm-label padding="unset 0.5em" show="true" width="100%" name="label5_1" caption="bind:Variables.md5Check.dataSet.value"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
