--- a/src/main/webapp/pages/SignUp/SignUp.html
+++ b/src/main/webapp/pages/SignUp/SignUp.html
@@ -15,7 +15,7 @@
                     <wm-gridrow name="gridrow2">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn2">
                             <wm-form-field name="password" displayname="Password" required="true" show="true" generator="assigned" primary-key="false" key="password" type="string" is-related="false" maxchars="64" pc-display="true" mobile-display="true" widget="password"
-                                placeholder="Enter password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$"></wm-form-field>
+                                placeholder="Enter password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$" on-blur="passwordBlur($event, $scope)"></wm-form-field>
                             <wm-form-field displayname="Confirm Password" required="true" show="true" generator="assigned" primary-key="false" key="password" type="string" is-related="false" maxchars="64" pc-display="true" mobile-display="true"
                                 widget="password" name="password1" placeholder="Retype password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$" on-blur="password1Blur($event, $scope)"></wm-form-field>
                             <wm-label padding="unset 0.5em" name="label1" caption="Password must contain at least 1 uppercase and lowercase alphabet and 1 number" fontsize="10" conditionalclass="bind:{'text-danger': Widgets.UsersLiveForm1.formWidgets.password1.datavalue != Widgets.UsersLiveForm1.formWidgets.password.datavalue}"></wm-label>
