--- a/src/main/webapp/pages/SignIn/SignIn.html
+++ b/src/main/webapp/pages/SignIn/SignIn.html
@@ -12,13 +12,13 @@
                 <wm-composite name="composite2">
                     <wm-label class="col-xs-12 control-label" caption="Password" name="label2"></wm-label>
                     <wm-container class="col-xs-12" name="container2">
-                        <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" updateon="default" on-change="Variables.md5Check.invoke()"></wm-text>
+                        <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" updateon="default"></wm-text>
                     </wm-container>
                 </wm-composite>
                 <wm-container name="container3">
                     <wm-anchor margin="unset 0.5em" name="anchor2" width="98%" caption="Forgot Password" fontsize="10" textalign="right" on-tap="Actions.goToPage_ForgotPassword.invoke()"></wm-anchor>
                 </wm-container>
-                <wm-button type="submit" caption="Login" width="100%" class="app-login-button btn-primary" name="button1" on-tap="Actions.loginAction.invoke()" textalign="center"></wm-button>
+                <wm-button type="submit" caption="Login" width="100%" class="app-login-button btn-primary" name="button1" on-tap="Actions.loginAction.invoke()" textalign="center" on-focus="Variables.md5Check.invoke()"></wm-button>
                 <wm-composite name="composite3">
                     <wm-checkbox class="app-login-rememberme" scopedatavalue="user.rememberMe" caption="Remember Me" name="checkbox1"></wm-checkbox>
                 </wm-composite>
